Some slight changes

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ footer {
 
 footer .footer-rights {
     text-align: center;
-    color: rgb(66, 65, 65);
+    color: grey;
     padding: 12px 0;
 }
 
